--- a/static.html
+++ b/static.html
@@ -12,6 +12,41 @@
 <body>
   <div id="root">
     <!-- insert your tags here -->
+    <div id="root">
+      <div id="toolbar">
+        <button>TURN-LEFT</button>
+        <button>MOVE</button>
+        <button>TURN-RIGHT</button>
+      </div>
+      <div id="board">
+        <table>
+          <tr>
+            <td>T</td>
+            <td>T</td>
+            <td></td>
+            <td>F</td>
+          </tr>
+          <tr>
+            <td>T</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>R↑</td>
+            <td></td>
+            <td></td>
+            <td>W</td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 
